# hs-probe-firmware

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-MIT  README.md
.cargo/: config
.github/: FUNDING.yml  bors.toml  dependabot.yml
.github/workflows/: ci.yml
firmware/: Cargo.toml  Embed.toml  memory.x
firmware/src/: app.rs  dap.rs  jtag.rs  main.rs  swd.rs  usb.rs  vcp.rs
firmware/src/usb/: dap_v1.rs  dap_v2.rs  dfu.rs  mod.rs  winusb.rs
hs-probe-bsp/: Cargo.toml
hs-probe-bsp/src/: bootload.rs  delay.rs  dma.rs  gpio.rs  lib.rs  otg_fs.rs  otg_hs.rs  rcc.rs  spi.rs  uart.rs
hs-probe-examples/: Cargo.toml  Embed.toml  build.rs  memory.x  openocd.cfg  openocd.gdb
hs-probe-examples/examples/: blinky.rs  blinky_ral.rs  clock_setup.rs  clock_setup_ral.rs  usb_serial.rs  usb_serial_ral.rs  usb_test_class.rs
hs-probe-examples/src/: main.rs
