[package]
name = "hs-probe-firmware"
version = "0.1.0"
authors = ["Vadim Kaushan <admin@disasm.info>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
rtt-target = { version = "0.2.0", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.0", features = ["cortex-m"] }
stm32ral = { version = "0.4.1", features = ["stm32f7x3", "rt"] }
hs-probe-bsp = { path = "../hs-probe-bsp" }
usb-device = "0.2.5"
usbd-serial = "0.1.0"
stm32-device-signature = { version = "0.3.0", features = ["stm32f4"] }
