[package]
name = "hs-probe-firmware"
version = "0.1.0"
authors = ["Vadim Kaushan <admin@disasm.info>"]
edition = "2018"

[dependencies]
cortex-m = "0.7.1"
cortex-m-rt = "0.6.12"
rtt-target = { version = "0.2.0", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.0", features = ["cortex-m"] }
stm32ral = { version = "0.4.1", features = ["stm32f7x3", "rt"] }
hs-probe-bsp = { path = "../hs-probe-bsp" }
usb-device = { version = "0.2.8", features = ["control-buffer-256"] }
usbd-serial = { version = "0.1.1", features = ["high-speed"] }
stm32-device-signature = { version = "0.3.1", features = ["stm32f72x"] }
num_enum = { version = "0.4.3", default-features = false }
git-version = "0.3.4"

[features]
turbo = []
