[package]
name = "hs-probe-firmware"
version = "0.1.0"
authors = ["Vadim Kaushan <admin@disasm.info>"]
edition = "2018"

[dependencies]
cortex-m-rt = "0.6.12"
rtt-target = { version = "0.2.0", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.0", features = ["cortex-m"] }
hs-probe-bsp = { path = "../hs-probe-bsp", features = ["rt"] }
usb-device = { version = "0.2.8", features = ["control-buffer-256"] }
usbd-serial = { version = "0.1.1", features = ["high-speed"] }
stm32-device-signature = { version = "0.3.1", features = ["stm32f72x"] }
num_enum = { version = "0.4.3", default-features = false }
git-version = "0.3.4"

[features]
turbo = []
